Fix box's alignment

--- a/style.css
+++ b/style.css
@@ -181,6 +181,9 @@ nav img {
     border: rgb(231, 229, 229) solid 1px;
     border-radius: 6px;
     margin-right: 3vw;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 
 }
 .box1 p {
